// Copyright 2023 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum GkehubFeatureResourceStateStateEnum {
  GkehubFeatureResourceStateStateEnumNO_VALUE_DO_NOT_USE = 0;
  GkehubFeatureResourceStateStateEnumSTATE_UNSPECIFIED = 1;
  GkehubFeatureResourceStateStateEnumENABLING = 2;
  GkehubFeatureResourceStateStateEnumACTIVE = 3;
  GkehubFeatureResourceStateStateEnumDISABLING = 4;
  GkehubFeatureResourceStateStateEnumUPDATING = 5;
  GkehubFeatureResourceStateStateEnumSERVICE_UPDATING = 6;
}

enum GkehubFeatureStateStateCodeEnum {
  GkehubFeatureStateStateCodeEnumNO_VALUE_DO_NOT_USE = 0;
  GkehubFeatureStateStateCodeEnumCODE_UNSPECIFIED = 1;
  GkehubFeatureStateStateCodeEnumOK = 2;
  GkehubFeatureStateStateCodeEnumWARNING = 3;
  GkehubFeatureStateStateCodeEnumERROR = 4;
}

message GkehubFeature {
  string name = 1;
  map<string, string> labels = 2;
  GkehubFeatureResourceState resource_state = 3;
  GkehubFeatureSpec spec = 4;
  GkehubFeatureState state = 5;
  string create_time = 6;
  string update_time = 7;
  string delete_time = 8;
  string project = 9;
  string location = 10;
}

message GkehubFeatureResourceState {
  GkehubFeatureResourceStateStateEnum state = 1;
  bool has_resources = 2;
}

message GkehubFeatureSpec {
  GkehubFeatureSpecMulticlusteringress multiclusteringress = 1;
}

message GkehubFeatureSpecMulticlusteringress {
  string config_membership = 1;
}

message GkehubFeatureState {
  GkehubFeatureStateState state = 1;
}

message GkehubFeatureStateState {
  GkehubFeatureStateStateCodeEnum code = 1;
  string description = 2;
  string update_time = 3;
}

message ApplyGkehubFeatureRequest {
  GkehubFeature resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteGkehubFeatureRequest {
  string service_account_file = 1;
  GkehubFeature resource = 2;
}

message ListGkehubFeatureRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListGkehubFeatureResponse {
  repeated GkehubFeature items = 1;
}

service GkehubFeatureService {
  rpc ApplyGkehubFeature(ApplyGkehubFeatureRequest) returns (GkehubFeature);
  rpc DeleteGkehubFeature(DeleteGkehubFeatureRequest) returns (google.protobuf.Empty);
  rpc ListGkehubFeature(ListGkehubFeatureRequest) returns (ListGkehubFeatureResponse);
}
